popover alignment, closing issue

--- a/src/components/CategorySelect/categorySelect.scss
+++ b/src/components/CategorySelect/categorySelect.scss
@@ -12,6 +12,7 @@
     font-size: var(--input-font-size);
     line-height: 140%;
     background-color: var(--color-base-0);
+    position: relative;
 
     .Layer__input-tooltip {
       flex: 1;
@@ -29,6 +30,8 @@
     box-shadow: none;
     margin: 0;
     max-width: 100%;
+    padding-right: 34px;
+    text-overflow: ellipsis;
   }
 
   [slot="trigger-button"] {
@@ -40,6 +43,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
   }
 
   [slot='match-badge'] {
@@ -109,12 +116,12 @@
 
 .Layer__category-select__list-item {
   display: grid;
-  grid-template-columns: minmax(0, 1fr) minmax(0, 120px) 16px;
-  grid-template-areas: "name account icon";
+  grid-template-columns: minmax(0, 1fr) 16px;
+  grid-template-areas: "name icon";
   box-sizing: border-box;
   align-items: center;
   width: 100%;
-  gap: var(--spacing-xs);
+  gap: var(--spacing-sm);
   padding: var(--spacing-xs) var(--spacing-lg);
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
@@ -132,11 +139,6 @@
     grid-area: name;
     display: flex;
     gap: var(--spacing-xs);
-  }
-
-  [slot="account"] {
-    text-align: right;
-    grid-area: account;
   }
 
   [slot="icon"] {
